<resources>
    <string name="app_name">MetroTime</string>
    <string name="calendar_bnv">Календарь</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="detail_bnv">Сегодня</string>
    <string name="label_fragment_calendar">Список смен</string>
    <string name="label_fragment_tonight">Сегодня</string>
    <string name="settings">Настройки</string>
    <string name="profile">Профиль</string>
    <string name="shift_details">Детали смены</string>
    <string name="shift_edit">Редактировать смену</string>
    <string name="button_save">Сохранить</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_choose_date">21.05.2021</string>
    <string name="et_hint_shift_name">Название смены</string>
    <string name="weekend_string">Выходной</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="reserve">Резерв</string>
    <string name="atz">АТЗ</string>
    <string name="gap">Разрыв</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="yesterday">Вчера</string>
    <string name="total_text">Всего: %s</string>
    <string name="average_rate_per_hour_text">В час: %s</string>
    <string name="norma">Норма</string>
    <string name="workdays_stat_name">Рабочие дни</string>
    <string name="weekends_stat_name">Выходные</string>
    <string name="holidays_stat_name">Праздничные</string>
    <string name="overwork_stat_name">Переработка</string>
    <string name="sick_list_days_stat_name">Дней на Б/Л</string>
    <string name="vacation_days_stat_name">Дней в отпуске</string>
    <string name="night_shifts_stat_name">Ночей</string>
    <string name="evening_shifts_stat_name">Вечерок</string>
    <string name="line_hours_stat_name">Линия</string>
    <string name="reserve_hours_stat_name">Резерв</string>
    <string name="evening_hours_stat_name">Вечерних часов</string>
    <string name="night_hours_stat_name">Ночных часов</string>
    <string name="as_master_hours_stat_name">Ст. машинист</string>
    <string name="as_mentor_hours_stat_name">Наставник</string>
    <string name="salary_stat_name">Заработано</string>
    <string name="count_future_shifts">Учитывать будущие смены</string>
    <string name="choose_date">Смена на</string>
    <string name="shift_start">Начало смены</string>
    <string name="shift_end">Конец смены</string>
    <string name="delete_queston">Удалить?</string>
    <string name="version_text">Версия %s</string>

    <string name="change_theme_toast_message">Тема будет изменена после перезапуска приложения</string>
    <string name="notes">Примечания</string>
    <string name="end_place">Место окончания</string>
    <string name="start_place">Место начала</string>
    <string name="tech_ucheba">Техучеба</string>
    <string name="reserve_short_text">РЕЗ</string>
    <string name="atz_short_text">АТЗ</string>
    <string name="tech_ucheba_short_text">ТУ</string>
    <string name="premium">Премия</string>
    <string name="write_premia_size">Задайте размер премии</string>
    <string name="ok">OK</string>
    <string name="premium_in_current_month">Премия (этот месяц)</string>
    <string name="try_other_apps">Попробуйте другие приложения:</string>
    <string name="info_menu_text">Инфо</string>
    <string name="metrotest_desc">Проходите тесты УПЦ на своем устройстве Android. Выбирайте количество вопросов. Ищите ответы быстро во встроенном поиске. Просматривайте статистику по темам техобучения.</string>
    <string name="yearly_bonus_sum">СГП за ДЕКАБРЬ</string>
    <string name="year_bonus_fragment_label">Расчет 13-ой</string>
    <string name="menu_yearly_title">Расчет 13-ой</string>
    <string name="yearly_q_desc">Коп. за руб.</string>
    <string name="yearly_title_text">Расчет годовой премии</string>
    <string name="year_stage_q_text">Ваш коэффициент: %.1f</string>
    <string name="yearly_q_text">%.1f коп. за руб</string>
    <string name="arithmetic_desc">2 2 2 = 1. Какие знаки нужно расставить между цифрами, чтобы равенство стало верным? Данное приложение позволяет быстро решать подобные уравнения.</string>
    <string name="metrotest_ref">https://play.google.com/store/apps/details?id=com.wannagoflorida.metrotest</string>
    <string name="arithmetics_ref">https://play.google.com/store/apps/details?id=com.clementl.android.arithmeticsigns</string>

    <string-array name="day_status_types">
        <item>Смена</item>
        <item>Выходной</item>
        <item>Больничный</item>
        <item>Отпуск</item>
        <item>Медкомиссия</item>
        <item>Донорский день</item>
        <item>Больничный по уходу</item>
        <item>Учебный отпуск</item>
    </string-array>

    <string-array name="qualification_classes_entries">
        <item>Без класса</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string-array name="qualification_classes_entry_values">
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string-array name="theme_entries">
        <item>Светлая</item>
        <item>Темная</item>
        <item>По умолчанию</item>
    </string-array>
    <string-array name="values_array_3">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>