<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_white"
        android:menuCategory="secondary"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/yearBonusFragment"
        android:icon="@drawable/ic_13_zp"
        android:title="@string/menu_yearly_title"
        android:menuCategory="secondary"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:menuCategory="secondary"
        android:title="@string/settings"
        android:visible="true"
        app:showAsAction="never" />



    <item
        android:id="@+id/infoFragment"
        android:menuCategory="secondary"
        android:title="@string/info_menu_text"
        android:visible="true"
        app:showAsAction="never" />
</menu>