<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="ru.clementl.metrotimex.viewmodel.ShiftCreateViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_between_elements"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                android:textSize="14dp" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:layout_weight="1"
                android:text="@string/button_save"
                android:textSize="14dp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_day_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Смена/Выходной"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/sp_day_type" />

                <EditText
                    android:id="@+id/et_end_place"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="Место окончания"
                    android:inputType="textPersonName"
                    android:maxLength="5"
                    android:textSize="18dp"
                    app:endLoc="@{viewModel.editingDay}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/et_start_place"
                    app:layout_constraintTop_toBottomOf="@+id/button_end_time" />

                <EditText
                    android:id="@+id/et_start_place"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="Место начала"
                    android:inputType="textPersonName"
                    android:maxLength="5"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toStartOf="@+id/et_end_place"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_start_time"
                    app:startLoc="@{viewModel.editingDay}" />

                <Button
                    android:id="@+id/button_end_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="16:00"
                    android:textColor="@color/icons_or_text"
                    android:textSize="14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/button_start_time"
                    app:layout_constraintTop_toBottomOf="@+id/tv_end_text"
                    app:simpleEndTime="@{viewModel.editingDay}" />

                <Button
                    android:id="@+id/button_start_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="8:00"
                    android:textColor="@color/icons_or_text"
                    android:textSize="14dp"
                    app:layout_constraintEnd_toStartOf="@+id/button_end_time"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_start_text"
                    app:simpleStartTime="@{viewModel.editingDay}" />

                <TextView
                    android:id="@+id/tv_end_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Окончание"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="@+id/button_end_time"
                    app:layout_constraintTop_toBottomOf="@+id/et_shift_name_layout" />

                <TextView
                    android:id="@+id/tv_start_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Начало"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="@+id/button_start_time"
                    app:layout_constraintTop_toBottomOf="@+id/et_shift_name_layout" />

                <Button
                    android:id="@+id/field_choose_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/button_choose_date"
                    android:textAllCaps="false"
                    android:textColor="@color/icons_or_text"
                    android:textSize="14dp"
                    app:layout_constraintTop_toBottomOf="@id/sp_day_type" />

                <Button
                    android:id="@+id/field_choose_date_range"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/button_choose_date"
                    android:textAllCaps="false"
                    android:textColor="@color/icons_or_text"
                    android:textSize="14dp"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@id/sp_day_type" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/et_shift_name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_elements"
                    android:ems="10"
                    app:endIconMode="clear_text"
                    android:hint="@string/et_hint_shift_name"


                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/field_choose_date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_shift_name"
                        shiftNameOrEmpty="@{viewModel.editingDay}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLength="7"
                        android:textSize="18dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/sp_day_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_day_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_day_type"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/reserve_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reserve"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_start_place" />

                <CheckBox
                    android:id="@+id/atz_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atz"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="@+id/reserve_check_box"
                    app:layout_constraintTop_toBottomOf="@+id/reserve_check_box" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/notes_textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/atz_check_box">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notes_textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.editingDay.notes}"
                        android:textSize="18dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </LinearLayout>
</layout>