<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.clementl.metrotimex.screens.shift.detail.ShiftDetailViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/day_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/blue_gray"
            android:paddingStart="@dimen/padding_standard"
            android:paddingTop="120dp"
            android:paddingEnd="@dimen/padding_standard"
            android:textColor="@color/icons_or_text"
            android:textSize="34sp"
            app:dayNameWithOddEven="@{viewModel.MDay}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="95.2" />

        <TextView
            android:id="@+id/desc_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="normal"
            app:descString="@{viewModel.MDay}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_text"
            tools:text="10:27 СК - 19:05 СК" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/blue_gray"
            android:paddingStart="@dimen/padding_standard"
            android:paddingEnd="@dimen/padding_standard"
            android:paddingBottom="@dimen/padding_standard"
            android:textColor="@color/icons_or_text"
            android:textSize="14sp"
            app:fullDate="@{viewModel.MDay}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_name"
            tools:text="28 июля 2021" />

        <TextView
            android:id="@+id/reserve_label"
            style="@style/label_shift_style"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/reserve_short_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_string"
            app:showReserve="@{viewModel.MDay}"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/atz_label"
            style="@style/label_shift_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/atz_short_text"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/reserve_label"
            app:layout_constraintTop_toBottomOf="@+id/desc_string"
            app:layout_goneMarginStart="16dp"
            app:showAtz="@{viewModel.MDay}"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tu_label"
            style="@style/label_shift_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/tech_ucheba_short_text"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/atz_label"
            app:layout_constraintTop_toBottomOf="@+id/desc_string"
            app:layout_goneMarginStart="16dp"
            app:showTech="@{viewModel.MDay}"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/duration_tv"
            durationString="@{viewModel.MDay}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/transparent_white"
            android:textSize="72dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/date_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="6,1" />

        <TextView
            android:id="@+id/earned_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="6458.65 P" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/earned_text"
            app:layout_constraintTop_toBottomOf="@+id/desc_string"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/notes_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/notes"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_string">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notes_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false"
                    android:text="@{viewModel.MDay.notes}"
                    android:textColor="@color/default_text_view"
                    android:textSize="18sp"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas facue suscipit pharetra. Praesent nec ris" />
            </com.google.android.material.textfield.TextInputLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>